--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         <button onclick="encrypt()">Encrypt</button>
         <button onclick="decrypt()">Decrypt</button>
+        <button onclick="clearFields()">Clear</button>
 
         <div id="output"></div>
         <script src="script.js"></script>
