--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Encrypt/Decrypt </title>
+    <link rel="icon" type="image/png" href="source/favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
