responsive for mobile

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <label>Message:</label><br>
         <input type="text" id="message"><br>
         <label>Key:</label><br>
-        <input type="text" id="key"><br>
-
-        <button onclick="encrypt()">Encrypt</button>
-        <button onclick="decrypt()">Decrypt</button>
-        <button onclick="clearFields()">Clear</button>
+        <input type="number" id="key"><br>
+        <div id="btnarea">
+            <button id="enc" onclick="encrypt()">Encrypt</button>
+            <button id="dec" onclick="decrypt()">Decrypt</button>
+            <button id="clear" onclick="clearFields()">Clear</button>
+        </div>
 
         <div id="output"></div>
         <script src="script.js"></script>
